--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -205,12 +205,12 @@ Roughly speaking, required sample size to ensure above conditions is that $n>\sq
 
 When the both HS pairs and PO pairs, which are found between populations, are simultaneously available, we can obtain efficient estimators by combined $\widehat{M_1}$ and $\widehat{M_2}$ for migration number: 
 \begin{align}
-\widehat{M_3} &= \frac{ N_{1} N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right), }
+\widehat{M_3} &= \frac{ N_{1} N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right) },
 \label{AP-1}
 \end{align}
 and by combining $\widehat{m_1}$ and $\widehat{m_2}$ for migration rate: 
 \begin{align}
-\widehat{m_3} &= \frac{ N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right). }
+\widehat{m_3} &= \frac{ N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right)}.
 \label{AP-2}
 \end{align}
 For those estimators, $\widetilde{H}_{\rm HS,bet}$ and $\widetilde{H}_{\rm PO,bet}$ is weighted by a sample size $n_{\rm O, 2}$ and $n_{\rm P, 2}$, respectively. 
