add caption of Fig1 in main text

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -518,7 +518,7 @@ No datasets were generated or analyzed in this study.
 
 \clearpage
 
-\newcommand{\figcapa}{Example of relationships between mothers and their offspring number. The open, gray, and filled circles represent mothers, their eggs, and their offspring, respectively. The area of an open circle indicates the degree of reproductive potential of each mother (i.e., $\lambda_i$). The dotted and thin arrows denote mother--egg and egg--offspring relationships, respectively. The symbol x denotes a failure to survive at sampling. Sampled individuals are denoted with squares. Input parameters in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$, $N_{1}=16$, $N_{2}=14$, and $M=6$. The numbers of kinship pairs: $H_{\rm PO, bet}=1$, $H_{\rm HS, bet}=2$, $H_{\rm PO, 1}=3$, and $H_{\rm PO, 2}=2$.}
+\newcommand{\figcapa}{(a) The phases of the events relevant to this study along the time line. (b) Example of relationships between parents and their offspring number between/within populations. Upper and lower square indicates individuals belonging to the population 1 before migrations (at sample timing in the first year) and individuals belonging to the population 2 after reproduction (at sample timing in the second year), respectively. The open circles on the left side, right side, and the center represent mothers, fathers, and their offspring, respectively. The thin line denotes parent-offspring relationship. The bold arrow denotes the migration and the symbol x denotes a failure to survive at sampling in the second year. The number of sampled individuals in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$, $N_{1}=16$, $N_{2}=14$, and $M=6$; the numbers of kinship pairs: $H_{\rm PO, bet}=1$, $H_{\rm HS, bet}=2$, $H_{\rm PO, 1}=3$, and $H_{\rm PO, 2}=2$.}
 
 \newcommand{\figcapb}{Violin plots showing the distribution of relative bias in our estimator (Eq.~\ref{NeN_hat2}) for various values of $c$ and sample size. Filled circles represent the mean values. Sample sizes for mothers and offspring are identical (i.e., $n=n_{\rm M} = n_{\rm O}$) and indicated in the legend. For the demonstration purposes, the distribution is truncated, although the mean values are calculated including the truncated values. (a) $N_{\rm m}=1{,}000$, (b) $N_{\rm m}=10{,}000$.}
 
