modify caption of Fig1 in main text

--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -118,7 +118,7 @@ Suppose there are $N_1$ parents in the population 1 at the beginning of the firs
 
 To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled in the first and second year, respectively, which are identified as young-of-year individuals without errors. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled even in the same year. It should be noted that all the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$, and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation, as explained later. Up to the subsection 2.6, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invasive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. {\bf Figure~\ref{cartoon}a} illustrates a timeline of sampling scheme for hypothetical populations. 
 
-In the example depicted in {\bf Fig~\ref{cartoon}b}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explain the next section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). 
+In the example depicted in {\bf Fig~\ref{cartoon}b}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explained in the following section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). 
 
 \subsection{HS pair-based model}
 
@@ -518,7 +518,7 @@ No datasets were generated or analyzed in this study.
 
 \clearpage
 
-\newcommand{\figcapa}{(a) The phases of the events relevant to this study along the time line. (b) Example of relationships between parents and their offspring number between/within populations. Upper and lower square indicates individuals belonging to the population 1 before migrations (at sample timing in the first year) and individuals belonging to the population 2 after reproduction (at sample timing in the second year), respectively. The open circles on the left side, right side, and the center represent mothers, fathers, and their offspring, respectively. The thin line denotes parent-offspring relationship. The bold arrow denotes the migration and the symbol x denotes a failure to survive at sampling in the second year. The number of sampled individuals in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$, $N_{1}=16$, $N_{2}=14$, and $M=6$; the numbers of kinship pairs: $H_{\rm PO, bet}=1$, $H_{\rm HS, bet}=2$, $H_{\rm PO, 1}=3$, and $H_{\rm PO, 2}=2$.}
+\newcommand{\figcapa}{(a) The phases of the events relevant to this study along the time line. (b) Hypothetical populations with $N_{1}=16$, $N_{2}=14$, and $M=6$. Upper and lower square indicates individuals belonging to the population 1 before migration (at sample timing in the first year) and individuals belonging to the population 2 after reproduction (at sample timing in the second year), respectively. The open circles on the left side, right side, and the center represent mothers, fathers, and their offspring, respectively. The thin line denotes parent-offspring relationship. The bold arrow denotes the migration and the symbol x denotes a failure to survive at sampling in the second year. Sampled individuals are labeled with an index number. The number of sampled individuals in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$; the numbers of kinship pairs: $H_{\rm PO, bet}=1$ (i.e., ``7-10'' pair), $H_{\rm HS, bet}=2$ (i.e., ``8-16'' and ``9-16'' pairs), $H_{\rm PO, 1}=3$ (i.e., ``1-6'', ``3-5'' and ``4-7'' pairs), and $H_{\rm PO, 2}=2$ (i.e., ``11-17'' and ``15-16'' pairs).}
 
 \newcommand{\figcapb}{Violin plots showing the distribution of relative bias in our estimator (Eq.~\ref{NeN_hat2}) for various values of $c$ and sample size. Filled circles represent the mean values. Sample sizes for mothers and offspring are identical (i.e., $n=n_{\rm M} = n_{\rm O}$) and indicated in the legend. For the demonstration purposes, the distribution is truncated, although the mean values are calculated including the truncated values. (a) $N_{\rm m}=1{,}000$, (b) $N_{\rm m}=10{,}000$.}
 
