--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -555,7 +555,7 @@ No datasets were generated or analyzed in this study.
 \section*{Reproductive potential}
 
 \renewcommand{\theequation}{A\arabic{equation}}
-Here, we introduce the concept of the reproductive potential of parent $i$ or $j$, which is defined as the expected number of surviving offspring at sampling time, denoted by $\lambda_{i,1}$ or $\lambda_{j,2}$. The reproductive potential is determined by several factors, including the parent’s age, weight, residence time on the spawning ground. It should be noted that the magnitude of this parameter ($\lambda_{i,1}$ or $\lambda_{i,2}$) includes information about the survival rate of the offspring, the number of days after egg hatching, and the egg number; this implies that the parameter reflects the sample timing. It should also be noted that the modeling framework does not depend on whether the reproductive potential is heritable or not.
+Here, we introduce the concept of the reproductive potential of parent $i$ in the population $m$, which is defined as the expected number of surviving offspring at sampling time, denoted by $\lambda_{i,m}$. The reproductive potential is determined by several factors, including the parent's age, weight, residence time on the spawning ground. It should be noted that the magnitude of this parameter ($\lambda_{i,m}$) includes information about the survival rate of the offspring, the number of days after egg hatching, and the egg number; this implies that the parameter reflects the sample timing. It should also be noted that the modeling framework does not depend on whether the reproductive potential is heritable or not.
 
 
 
